2007-05-26  David Hyatt  <hyatt@apple.com>

        Improve the </p> -> <p></p> error message to not spew two errors.
        Fix a bug where errors reported inside document.write didn't get
        reported as such because of a mistake in the notation of SegmentedString.

        Reviewed by aroben

        * html/HTMLParser.cpp:
        (WebCore::HTMLParser::processCloseTag):
        * platform/SegmentedString.h:
        (WebCore::SegmentedSubstring::clear):

2007-05-26  David Hyatt  <hyatt@apple.com>

        Fix for bug 13887, percentage height block not sized correctly inside
        positioned percentage height containing block.

        Reviewed by mitz

        fast/block/positioning/complex-percentage-height.html

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::calcPercentageHeight):

2007-05-26  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Oliver Hunt.

        - finish fixing http://bugs.webkit.org/show_bug.cgi?id=13871
          Box shadow should not apply to Aqua-themed controls

        Covered by fast/forms/box-shadow-override.html

        I forgot to include adjustSliderThumbStyle in the previous patch and the
        test didn't detect it because of a bug introduced in r21739.

        * rendering/RenderThemeMac.h:
        * rendering/RenderThemeMac.mm:
        (WebCore::RenderThemeMac::adjustSliderThumbStyle):

2007-05-26  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13876
          Box-Shadow disappears if shadow doesn't fit in the window size

        Tests: fast/repaint/box-shadow-h.html
               fast/repaint/box-shadow-v.html

        * rendering/RenderTable.cpp:
        (WebCore::RenderTable::layout):

2007-05-26  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin.

        http://bugs.webkit.org/show_bug.cgi?id=13605
        REGRESSION: Browser crashes when switching Kotoeri input modes
